<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent" >

    <LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <!--début des infos du profil -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/profile_default"
                android:id="@+id/profile_picture"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_firstname"/>
                <TextView style="@style/homeValue" android:id="@+id/prenom"/>
            </LinearLayout>
            <View style="@style/separator"/>

            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_name"/>
                <TextView style="@style/homeValue" android:id="@+id/nom"/>
            </LinearLayout>
            <View style="@style/separator"/>



            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_sexe"/>
                <TextView style="@style/homeValue" android:id="@+id/sexe"/>
            </LinearLayout>
            <View style="@style/separator"/>

            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_attirance"/>
                <TextView style="@style/homeValue" android:id="@+id/attirance"/>
            </LinearLayout>
            <View style="@style/separator"/>



            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_hobby"/>
                <TextView style="@style/homeValue" android:id="@+id/hobby"/>
            </LinearLayout>
            <View style="@style/separator"/>


            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_naissance"/>
                <TextView style="@style/homeValue" android:id="@+id/naissance"/>
            </LinearLayout>
            <View style="@style/separator"/>


            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_ville"/>
                <TextView style="@style/homeValue" android:id="@+id/ville"/>
            </LinearLayout>
            <View style="@style/separator"/>

            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_mail"/>
                <TextView style="@style/homeValue" android:id="@+id/mail"/>
            </LinearLayout>
            <View style="@style/separator"/>


            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_yeux"/>
                <TextView style="@style/homeValue" android:id="@+id/yeux"/>
            </LinearLayout>
            <View style="@style/separator"/>

            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_cheveux"/>
                <TextView style="@style/homeValue" android:id="@+id/cheveux"/>
            </LinearLayout>
            <View style="@style/separator"/>

            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_tel"/>
                <TextView style="@style/homeValue" android:id="@+id/tel"/>
            </LinearLayout>
            <View style="@style/separator"/>

            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_description"/>
                <TextView style="@style/homeValue" android:id="@+id/description"/>
            </LinearLayout>
            <View style="@style/separator"/>

            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_dispo"/>
                <TextView style="@style/homeValue" android:id="@+id/dispo"/>
            </LinearLayout>
            <View style="@style/separator"/>

            <LinearLayout style="@style/llHome">
                <TextView style="@style/homeDescription" android:text="@string/home_langue"/>
                <TextView style="@style/homeValue" android:id="@+id/langue"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_actual_relation"
            android:id="@+id/text_relation"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:tag="favorite"
            android:id="@+id/favorite"
            android:visibility="gone"
            android:text="@string/profile_become_favorite"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:tag="friend"
            android:id="@+id/friend"
            android:visibility="gone"
            android:text="@string/profile_become_friend"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:tag="ask"
            android:id="@+id/ask"
            android:visibility="gone"
            android:text="@string/profile_ask_friend"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:tag="block"
            android:id="@+id/block"
            android:visibility="gone"
            android:text="@string/profile_block"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:tag="unblock"
            android:id="@+id/unblock"
            android:visibility="gone"
            android:text="@string/profile_unblock"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:tag="unfavorite"
            android:id="@+id/unfavorite"
            android:visibility="gone"
            android:text="@string/profile_unfavorite"/>

    </LinearLayout>
</LinearLayout>
    </FrameLayout>
    <include layout="@layout/menu_layout"/>
</android.support.v4.widget.DrawerLayout>