<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/drawer_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_langue"
            android:layout_gravity="center_horizontal" />




        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/eyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_french"/>
            <RadioButton android:id="@+id/eyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_english"/>
            <RadioButton android:id="@+id/eyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_dutch"/>
            <RadioButton android:id="@+id/eyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_german"/>
        </RadioGroup>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_apply"
            android:id="@+id/register"
            android:onClick="register"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>