<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:id="@+id/list_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#f1f2f7" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:text="@string/menu_profil"
        android:clickable="true"
        android:onClick="clickMenu"
        android:tag="profil"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:text="@string/menu_parametre"
        android:clickable="true"
        android:onClick="clickMenu"
        android:tag="param"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:text="@string/menu_ami"
        android:clickable="true"
        android:onClick="clickMenu"
        android:tag="ami"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:text="@string/menu_home"
        android:clickable="true"
        android:onClick="clickMenu"
        android:tag="home"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:text="@string/menu_requete"
        android:clickable="true"
        android:onClick="clickMenu"
        android:tag="requete"/>
</LinearLayout>