<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/root"
        android:orientation="vertical">


    </LinearLayout>
    </ScrollView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint="@string/modify_name_filtre"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="cheveux"
        android:onClick="click"
        android:text="@string/modify_cheveux"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="yeux"
        android:onClick="click"
        android:text="@string/modify_yeux"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="sexe"
        android:onClick="click"
        android:text="@string/modify_sexe"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="end"
        android:onClick="click"
        android:text="@string/modify_end"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="reset"
        android:onClick="click"
        android:text="@string/modify_reset"/>

</LinearLayout>
    </FrameLayout>
    <include layout="@layout/menu_layout"/>
</android.support.v4.widget.DrawerLayout>